# ant_colony

./: Cargo.toml
src/: ant.rs  camera.rs  main.rs  resource.rs
src/ant/: parts.rs
