[package]
name = "ant_colony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "*"
bevy_rapier2d = { version = "*", features = ["simd-stable", "debug-render"]}
bevy-inspector-egui = "*"
bevy-inspector-egui-rapier = {version = "*", features = ["rapier2d"]}